<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Activity -->
    <string name="no_network_connection_message">No Internet connection</string>
    <!-- Activity end -->


    <!-- Navigation drawer strings -->
    <string name="drawer_subtitle">Active service:</string>
    <string name="drawer_no_service">No Service</string>
    <string name="drawer_no_service_url">No Service URL</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_closed">Drawer Closed</string>
    <string name="change_identitiy">Identity List</string>
    <string name="change_service">Configuration List</string>
    <string name="about">About</string>
    <string name="quick_start_guide">Quick Start Guide</string>
    <string name="m_pin_server_guide">Get your own M-Pin Server</string>
    <!-- Navigation drawer strings end -->


    <!-- Toobar titles -->
    <string name="identity_list_title">Identity List</string>
    <string name="identity_created_title">Identity Created</string>
    <string name="add_identity_title">Add Identity</string>
    <string name="confirm_email_title">Confirm Email</string>
    <string name="access_number_title">Enter Access Number</string>
    <string name="otp_title">One Time Password</string>
    <string name="select_service_title">Select Service</string>
    <string name="account_summary">Account Summary</string>
    <string name="identity_blocked_title">Identity Blocked</string>
    <!-- Toobar titles end -->


    <!-- Menu titles -->
    <string name="select_identity">Select User</string>
    <string name="reset_pin">Reset Pin</string>
    <string name="delete_identity">Delete</string>
    <string name="select_config">Select Configuration</string>
    <!-- Menu titles end -->


    <!-- Context Menu titles -->
    <string name="select_config_context_menu">Select Configuration</string>
    <string name="new_config_context_menu">New</string>
    <string name="edit_config_context_menu">Edit</string>
    <string name="delete_config_context_menu">Delete</string>
    <string name="scan_qr_config_context_menu">Scan QR Code</string>
    <!-- Context Menu titles end -->

    <string name="add_identity_button">Add an identity</string>
    <string name="app_name">CertiVox M-Pin</string>
    <string name="loading">Loading</string>

    <!-- Add Identity -->
    <string name="enter_mail_title">Email address:</string>
    <string name="device_name_title">Device name:</string>
    <string name="default_device_name">Sample App (Android)</string>
    <string name="create_identity">Create Identity</string>
    <!-- Add Identity end -->


    <!-- Confirm Email -->
    <string name="confirm_new_identitiy">We have sent you an email to: %1$s \n Click the link in the email, to confirm your identity and proceed.</string>
    <string name="email_confirmed_button">I confirmed my email, continue</string>
    <string name="resend_email_button">Resend email</string>
    <string name="back_button">GO TO THE IDENTITIES LIST</string>
    <!-- Confirm Email End -->


    <!-- Identity Created -->
    <string name="identity_created">Congratulations! Your M-Pin identity: %1$s has been set up successfully.</string>
    <string name="sign_in_button">Sign in with this identity</string>
    <!-- Identity Created End -->


    <!-- Access number -->
    <string name="access_number_text">Enter the %1$s-digit Access Number</string>
    <string name="access_number_info">You can find the Access Number on the Online login page.</string>
    <!-- Access number end -->


    <!-- OTP -->
    <string name="otp_title_label">One-Time Password</string>
    <string name="otp_info_label">You can now use this password to log in to your VPN service.</string>
    <!-- OTP end -->


    <!-- Identity Blocked -->
    <string name="identity_blocked_1">Wrong PIN entered too many times.</string>
    <string name="identity_blocked_2">Your identity is blocked.</string>
    <string name="identity_blocked_3">You can sign up a new identity or choose existing one.</string>
    <string name="reset_pin_button">Reset Pin</string>
    <string name="remove_identity_button">Remove identity</string>
    <!-- Identity Blocked End -->


    <!-- Configuration Edit -->
    <string name="select_service_toolbar_title">Select Service</string>
    <string name="add_service_toolbar_title">Add Service</string>
    <string name="config_detail_toolbar_title">Edit Service</string>
    <string name="enter_service_name_title">Enter Service Name</string>
    <string name="enter_service_name_hint">Service Name</string>
    <string name="enter_server_url_hint">M-Pin Server URL</string>
    <string name="enter_rps_prefix_hint">RPS Prefix</string>
    <string name="request_mobile_title">Login to Mobile App</string>
    <string name="request_otp_title">OTP Login</string>
    <string name="request_an_title">Web Login</string>
    <string name="check_service">Test Configuration</string>
    <string name="save_configuration">Save Configuration</string>
    <string name="add_service">Add Service</string>
    <!-- Configuration Edit end -->


    <!-- About -->
    <string name="about_title">About</string>
    <string name="about_version">Version:</string>
    <string name="about_build">Build:</string>
    <string name="certivox_logo">Certivox Logo</string>
    <string name="mpin_logo">Mpin Logo</string>
    <string name="about_info_text_1">CertiVox M-Pin</string>
    <string name="about_info_text_2">Copyright  \u00A9 2015 CertiVox.\n All rights reserved. </string>
    <string name="terms_and_conditions_link"><a href="https://www.certivox.com/about-certivox/terms-and-conditions">CertiVox Terms &amp; Conditions</a></string>
    <string name="mobile_guide_link"><a href="http://www.certivox.com/mobile-app">M-Pin Mobile Guide</a></string>
    <string name="sdk_link"><a href="https://github.com/CertiVox">Built on the M-Pin Mobile SDK</a></string>
    <string name="homepage_link"><a href="https://www.certivox.com/">CertiVox Homepage</a></string>
    <string name="support_link"><a href="https://www.certivox.com/support">Product Support</a></string>
    <string name="privacy_link"><a href="https://www.certivox.com/about-certivox/security-privacy/">Values / Security / Privacy</a></string>
    <!-- About end -->


    <!-- No Internet Connection -->
    <string name="no_internet_title">No Internet Connection</string>
    <string name="no_internet_text">Please check your connection and try again</string>
    <string name="no_internet_retry_button">Retry</string>
    <!-- No Internet Connection end -->


    <!-- Guide -->
    <string name="skip_button_title">Skip</string>
    <string name="done_button_title">Done</string>
    <string name="gd_first_start_title">Setup your phone\nto use M-Pin</string>
    <string name="gd_create_identity_title">Create an identity</string>
    <string name="gd_create_identity_content">Enter your email address to register.</string>
    <string name="gd_confirm_email_title">Confirm your email</string>
    <string name="gd_confirm_email_content">Click the link in the email and you are ready to choose your PIN.</string>
    <string name="gd_create_pin_title">Create your PIN</string>
    <string name="gd_create_pin_content">It\'s much simpler than a password and more secure.</string>
    <string name="gd_ready_to_go_title">You are ready to go!</string>
    <string name="gd_ready_to_go_content">You can now use your M-Pin identity any time you want.</string>
    <string name="gd_login_to_community_title">Login to the CertiVox\ncommunity</string>
    <string name="gd_get_access_number_title">Get your Access Number</string>
    <string name="gd_get_access_number_content">Login to discuss.certivox.com on your desktop browser and choose \"Sign in with phone\".</string>
    <string name="gd_get_mpin_server_title">Get your own M-Pin Server</string>
    <string name="gd_download_server_title">Download and setup your own M-Pin Server</string>
    <string name="gd_download_server_content">Visit certivox.com/products, choose from M-Pin Core or M-Pin SSO, then follow the online installation instructions.</string>
    <string name="gd_add_server_to_app_title">Add your server to this app</string>
    <string name="gd_add_server_to_app_content">Simply hit “+” on the next screen then enter the name and URL of your M-Pin Server and you are ready to authenticate to your service using this app.</string>
    <!-- Guide end -->


    <!-- Select configs activity -->
    <string name="import_configs_title">Import configurations</string>
    <string name="import_configs_confirm_overrides_title">Overrides selected</string>
    <string name="import_configs_confirm_overrides_text">Are you sure you want to override the configurations with duplicated names?</string>
    <string name="import_configs_confirm_active_config_override_title">Active configuration override</string>
    <string name="import_configs_confirm_active_config_override_text">Overwrite the URL for the active service?\nAll existing identities will be deleted.</string>
    <string name="import_configs_duplicated_config_info">Duplicate</string>
    <!-- Select configs activity -->

    <string name="logout">Logout</string>

    <!-- Dialogs -->
    <string name="error_dialog_title">Error</string>
    <string name="network_error_title">Network error</string>
    <string name="incorrect_access_number_title">Incorrect Access Number</string>
    <string name="incorrect_pin_title">Wrong PIN, try again!</string>
    <string name="otp_not_supported_title">OTP not supported</string>
    <string name="successful_login_title">Successful Login</string>
    <string name="otp_not_supported_text">The configuration does not support OTP</string>
    <string name="successful_login_text">You are now logged in!</string>
    <string name="try_again">Try again</string>
    <string name="user_not_authorized">You are not authorized! Please contact the service administrator or try again later.</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="invalid_url_address_title">Invalid URL address</string>
    <string name="invalid_backend_title">Invalid URL</string>
    <string name="invalid_backend_content">M-PIN Server URL is not valid</string>
    <string name="correct_url_title">Success</string>
    <string name="correct_url_content">The backend URL is correct!</string>
    <string name="empty_title_content">Service name field is empty</string>
    <string name="read_qr_error_title">Error reading QR code</string>
    <string name="read_qr_error_content">Unexpected error occurred, try again!</string>
    <!-- Dialogs end -->


    <!-- Toasts -->
    <string name="no_internet_toast">No Internet Connection. Please check you connection and try again.</string>
    <!-- Toasts end -->

</resources>