<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mpin="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/configs_scan_qr"
        android:icon="@drawable/ic_qr"
        android:title="@string/scan_qr_config_context_menu"
        mpin:showAsAction="always"/>
    <item
        android:id="@+id/select_config"
        android:icon="@drawable/ic_check"
        android:title="@string/select_config_context_menu"
        mpin:showAsAction="always"/>
    <item
        android:id="@+id/configs_list_new"
        android:title="@string/new_config_context_menu"/>
    <item
        android:id="@+id/configs_list_edit"
        android:title="@string/edit_config_context_menu"/>
    <item
        android:id="@+id/configs_list_delete"
        android:title="@string/delete_config_context_menu"/>

</menu>