<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp" >

    <TextView
        android:id="@+id/enter_service_name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/enter_service_name_title"
        android:textColor="@color/green"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/service_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_service_name_title"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_service_name_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/service_url_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/service_name_input"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_server_url_hint"
        android:inputType="textUri" />

    <EditText
        android:id="@+id/service_rts_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/service_url_input"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_rps_prefix_hint"
        android:inputType="text" />

    <CheckBox
        android:id="@+id/service_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/service_rts_input"
        android:layout_marginTop="20dp"
        android:padding="3dp"
        android:text="@string/request_mobile_title" />

    <CheckBox
        android:id="@+id/service_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/service_mobile"
        android:layout_marginTop="20dp"
        android:padding="3dp"
        android:text="@string/request_otp_title" />

    <CheckBox
        android:id="@+id/service_an"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/service_otp"
        android:layout_marginTop="20dp"
        android:padding="3dp"
        android:text="@string/request_an_title" />

    <Button
        android:id="@+id/check_service_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_above="@+id/save_service_button"
        android:background="@drawable/button_selector_green"
        android:enabled="true"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:text="@string/check_service"
        android:textColor="@color/button_selector_green_textcolor" />

    <Button
        android:id="@+id/save_service_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_selector_green"
        android:enabled="true"
        android:paddingEnd="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:text="@string/save_configuration"
        android:textColor="@color/button_selector_green_textcolor" />

</RelativeLayout>