<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/user_avatar"
        android:src="@drawable/ic_avatar_big" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_avatar"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:textColor="@color/orange"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/info_text_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_email"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/identity_blocked_1"
        android:textColor="@color/base_text_color"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/info_text_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_text_1"
        android:gravity="center_horizontal"
        android:text="@string/identity_blocked_2"
        android:textColor="@color/base_text_color"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/info_text_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_text_2"
        android:gravity="center_horizontal"
        android:text="@string/identity_blocked_3"
        android:textColor="@color/base_text_color"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/reset_pin_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_selector_green"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:text="@string/reset_pin_button"
            android:textColor="@color/button_selector_green_textcolor"
            android:textSize="14sp" />

        <Button
            android:id="@+id/remove_identity_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
           android:background="@drawable/button_selector_white"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:text="@string/remove_identity_button"
            android:textColor="@color/button_selector_white_textcolor"
            android:textSize="14sp" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_selector_white"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:text="@string/back_button"
            android:textColor="@color/button_selector_white_textcolor"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>