<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/GuideContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/gd_create_identity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        android:text="@string/gd_first_start_title"
        android:textColor="@color/swans_down"
        android:textSize="28sp" />

    <ImageView
        android:id="@+id/gd_create_identity_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_gd_create_identity" />

    <TextView
        android:id="@+id/gd_create_identity_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/gd_create_identity_content"
        android:layout_marginBottom="30dp"
        android:text="@string/gd_create_identity_title"
        android:textColor="@color/swans_down"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/gd_create_identity_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:text="@string/gd_create_identity_content"
        android:textColor="@color/swans_down"
        android:textSize="18sp" />

</RelativeLayout>